--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.antonioleiva.mvpexample.app" >
+    package="com.antonioleiva.mvpexample.app">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
+        <activity android:name=".movieapp.movie_details.MovieDetailsActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".movieapp.movie_filter.MovieFilterActivity"
+            android:label="@string/filter"/>
+        <activity android:name=".movieapp.movie_list.MovieListActivity" />
         <activity
             android:name=".login.LoginActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,9 +24,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.antonioleiva.mvpexample.app.main.MainActivity"
-            android:label="@string/title_activity_main" >
-        </activity>
+            android:name=".main.MainActivity"
+            android:label="@string/title_activity_main" />
+
     </application>
 
 </manifest>
